# wgpu-starter

./: .gitignore  Cargo.toml  LICENSE
WEB/: build.sh  index.html
extras/camera/: Cargo.toml
extras/camera/src/: camera3d.rs  lib.rs
main/: Cargo.toml
main/src/: game.rs  main.rs
main/src/wgpu/: context.rs  instance.rs  mod.rs  model.rs  texture.rs
