[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.12.3", features = ["derive"] }
cgmath = "0.18.0"
image = "0.24.5"
log = "0.4.17"
raw-window-handle = "0.5.0"
wgpu = { version = "0.14.2", features = ["webgl"] }
winit = "0.27.5"


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.5"
env_logger = "0.10.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Location"] }
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"

[dev-dependencies]
naga = { version = "0.10.0", features = ["glsl-in", "wgsl-in", "spv-out"] }
